erDiagram
  ORGANIZATIONS ||--o{ WORKSPACES : contains
  WORKSPACES ||--o{ PROJECTS : contains
  ORGANIZATIONS ||--o{ ORGANIZATION_MEMBERSHIPS : has
  WORKSPACES ||--o{ PROJECT_MEMBERSHIPS : has
  PROJECTS ||--o{ RUNS : has
  RUNS ||--o{ RUN_GATES : has
  RUNS ||--o{ RUN_EVENTS : has
  RUNS ||--o{ RUN_ARTIFACTS : has
  RUNS ||--o{ AUDIT_LOGS : emits
